--- a/src/kernel/SConscript
+++ b/src/kernel/SConscript
@@ -41,7 +41,7 @@ objects = [
 ]
 
 kernel = env.Program('kernel.elf', objects)
-kernel_stripped = env.Command('kernel-stripped.elf', kernel, '$STRIP -o $TARGET $SOURCE')
+kernel_stripped = env.Command('kernel-s.elf', kernel, '$STRIP -o $TARGET $SOURCE')
 
 env.Default(kernel_stripped)
 
